[tool.poetry]
name = "dio-banco-de-dados-com-python"
version = "0.1.0"
description = ""
authors = ["Tiago Tardelli <tiagob.tardelli@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
